@@ -1,6 +1,7 @@
 2011-09-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * DOC/cart.txt, DOC/USAGE, atari800.man, cartridge.[ch], ui.c: Added support
-  for Atrax SDX 64/128K cartridge mapping.
+  for Atrax SDX 64/128K cartridge mapping and for the Turbosoft 64/128
+  cartridge mappings.
 
 * cartridge.c: Fixed a bug in OSS 034M/043M mappings - the area filled by $FF
   should be $A000-$AFF instead of $8000-$9FFF.
